12 add support for ownership management (#16)
Internal reorganisation of the Serializer class. The Serializer is separated out in different management classes for object classes, interaction classes, and object instances. This enables en easier addition of support for RTI interface methods, such as the ownership management services group.